--- a/narwhal/kata/2021/08-AUGUST/kata-30-AUG--MONDAY.yml
+++ b/narwhal/kata/2021/08-AUGUST/kata-30-AUG--MONDAY.yml
@@ -6,7 +6,7 @@
 ############################
 ############################
 What are we trying to achieve
-  - Mob leader in 1 year
+  - Mob leader in 1 year [08/01/2022]
   - Devops Eningeer Cert in 1 year
 
 ############################
@@ -18,8 +18,6 @@ Where are we now?
   - course:
     - Learning Kubernetes
       - Chapter 4 of 6
-      
-  - gitx:
   - map:
   - chestnuts:
       
