--- a/narwhal/dailies/2021/OCTOBER/11-OCTOBER.yml
+++ b/narwhal/dailies/2021/OCTOBER/11-OCTOBER.yml
@@ -5,8 +5,8 @@
 -----------     October 2021       -------------
 ----------- Su  Mo  Tu We Th Fr Sa -------------
 -----------                   1  2 -------------
------------  3 *4*   5  6  7  8  9 -------------
------------ 10  11  12 13 14 15 16 -------------
+-----------  3   4   5  6  7  8  9 -------------
+----------- 10 *11* 12 13 14 15 16 -------------
 ----------- 17  18  19 20 21 22 23 -------------
 ----------- 24  25  26 27 28 29 30 -------------
 ----------- 31                     -------------
@@ -17,30 +17,30 @@
 
 ##################################################################################
 ##################################################################################	  
-############### MONDAY--00-XYZ-9999 #############################################
+############### MONDAY--11-OCT-2021 #############################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### TUESDAY--00-XYZ-9999 #############################################
+############### TUESDAY--12-OCT-2021 #############################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### WEDNESDAY--00-XYZ-9999 ###########################################
+############### WEDNESDAY--13-OCT-2021 ###########################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### THURSDAY--00-XYZ-9999 ############################################
+############### THURSDAY--14-OCT-2021 ############################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### FRIDAY--00-XYZ-9999 #############################################
+############### FRIDAY--15-OCT-2021 #############################################
 ##################################################################################
 ##################################################################################
