--- a/narwhal/dailies/2021/template-dailies.yml
+++ b/narwhal/dailies/2021/template-dailies.yml
@@ -1,73 +1,46 @@
-13-SEPT-2021
-##################################################################################
-##################################################################################	  
-############### MONDAY--13-SEPT-2021 #############################################
-##################################################################################
-##################################################################################
-
-
-hack
-target condition:
-  gitlab up and running in the cloud securely
-
-actual condition:
-  clone of old gitlab on vmware qa environment
-  everything appears consistente
-  
-    have a backup
-    sitting on a vm
-      no network access
-      
-      option to be copied from vm to local disk
-      
-      one of 100m of 400GB chunk
-  
-obstacles:
-  on copy...
-    copy begins
-      vm is runnign 500K /s in disk i/o
-      very long latency
-        50ms failure write to the disk
-        failures keep coming
-        
-        network in bad state?
-        
-next steps:
-  
-git splitted_tar]# rsync -avz --cecksum --progress ./blah13.6.7-ee_gitlab_backup.tar.; do echo $i; rsync -avz --progres $i -- spartaab /root/tmp/
-
-kill %1
-##################################################################################
-##################################################################################	  
-############### TUESDAY--14-SEPT-2021 #############################################
-##################################################################################
-##################################################################################
-
-
-
-
+################################################
+------------------------------------------------
+------------------------------------------------
+------------------------------------------------
+-----------     October 2021       -------------
+----------- Su  Mo  Tu We Th Fr Sa -------------
+-----------                   1  2 -------------
+-----------  3 *4*   5  6  7  8  9 -------------
+----------- 10  11  12 13 14 15 16 -------------
+----------- 17  18  19 20 21 22 23 -------------
+----------- 24  25  26 27 28 29 30 -------------
+----------- 31                     -------------
+------------------------------------------------
+------------------------------------------------
+------------------------------------------------
+################################################
 
 ##################################################################################
 ##################################################################################	  
-############### WEDNESDAY--15-SEPT-2021 ###########################################
+############### MONDAY--00-XYZ-9999 #############################################
 ##################################################################################
 ##################################################################################
-
-
 
 ##################################################################################
 ##################################################################################	  
-############### THURSDAY--16-SEPT-2021 ############################################
+############### TUESDAY--00-XYZ-9999 #############################################
 ##################################################################################
 ##################################################################################
-
- 
 
 ##################################################################################
 ##################################################################################	  
-############### FRIDAY--17-SEPT-2021 #############################################
+############### WEDNESDAY--00-XYZ-9999 ###########################################
 ##################################################################################
 ##################################################################################
 
+##################################################################################
+##################################################################################	  
+############### THURSDAY--00-XYZ-9999 ############################################
+##################################################################################
+##################################################################################
 
-
+##################################################################################
+##################################################################################	  
+############### FRIDAY--00-XYZ-9999 #############################################
+##################################################################################
+##################################################################################
