--- a/narwhal/dailies/2021/10-OCTOBER/04-OCTOBER.yml
+++ b/narwhal/dailies/2021/10-OCTOBER/04-OCTOBER.yml
@@ -17,30 +17,30 @@
 
 ##################################################################################
 ##################################################################################	  
-############### MONDAY--00-XYZ-9999 #############################################
+############### MONDAY--04-OCT-2021 #############################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### TUESDAY--00-XYZ-9999 #############################################
+############### TUESDAY--05-OCT-2021 #############################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### WEDNESDAY--00-XYZ-9999 ###########################################
+############### WEDNESDAY--06-OCT-2021 ###########################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### THURSDAY--00-XYZ-9999 ############################################
+############### THURSDAY--07-OCT-2021 ############################################
 ##################################################################################
 ##################################################################################
 
 ##################################################################################
 ##################################################################################	  
-############### FRIDAY--00-XYZ-9999 #############################################
+############### FRIDAY--08-OCT-2021 #############################################
 ##################################################################################
 ##################################################################################
